<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_video"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_video"/>
    <item
        android:id="@+id/action_hellolist"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_hellolist"/>
     <item
        android:id="@+id/action_callrest"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_callrest"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_showsetting"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_showsetting"/>
    <item
        android:id="@+id/action_alert"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_alert"/>
     <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
     <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
     
     
     
</menu>
